<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.javog.sesion.RegisterActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nameR"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="-5dp" />

    <EditText
        android:id="@+id/editCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/mailR"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="45dp" />

    <EditText
        android:id="@+id/editCel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Telefono"
        android:inputType="number"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="45dp" />

    <EditText
        android:id="@+id/editContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/contraR"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="96dp" />

    <EditText
        android:id="@+id/editContra2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/contra2R"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="139dp" />

    <EditText
        android:id="@+id/editDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Descripcion"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="45dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/colorTry1"
        android:text="@string/buttonRC"
        android:textColor="@color/cardview_light_background" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/colorTry1"
        android:text="@string/buttonC"
        android:textColor="@color/cardview_light_background" />

</LinearLayout>
