<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.javog.sesion.AddJobs">

    <EditText
        android:id="@+id/newJobTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/titleNewJob"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="-5dp" />

    <EditText
        android:id="@+id/newJobDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/descriptionNewJob"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="45dp" />

    <EditText
        android:id="@+id/newJobTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/timeNewJob"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="96dp" />

    <EditText
        android:id="@+id/newJobMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/moneyNewJob"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="139dp" />

    <EditText
        android:id="@+id/newJobAditionalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/infoNewJob"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="139dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ubicacion"
        android:textSize="20sp"
        android:textAlignment="textEnd"
        android:gravity="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:id="@+id/bMiLoc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Usar mi Ubicación"
            android:layout_weight="0.52" />

        <Button
            android:id="@+id/bPlace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Escoger un Lugar"
            android:layout_weight="0.45" />
    </LinearLayout>

    <Button
        android:id="@+id/btnNewJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTry1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/btnNewJob"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/btnCancelarChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/colorTry1"
        android:text="@string/buttonC"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />
</LinearLayout>
