<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_collapseMode="none"
    app:layout_collapseParallaxMultiplier="1.0"
    tools:context="com.example.javog.sesion.Perfil">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/imageP"
                android:scaleType="centerCrop"
                android:src="@drawable/blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="vertical"
                android:padding="16dp"
                android:id="@+id/linearLayout">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/slark_icon"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="4dp" />

                <TextView
                    android:id="@+id/nombrePerfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/nameP"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cellphoneP"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:text="@string/mailP"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabConfigPerfil"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:backgroundTint="@color/colorTry1"
                    app:fabSize="mini"
                    app:srcCompat="@android:drawable/ic_menu_save" />

            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginStart="17dp"
                android:clickable="true"
                app:backgroundTint="@android:color/holo_red_light"
                app:fabSize="mini"
                app:srcCompat="@android:drawable/ic_lock_power_off" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#455A64"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_scrollFlags="scroll|enterAlways">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:padding="16dp"
                android:rowCount="2">

                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/reviewsP"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/jobRequestP"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/jobsActiveP"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="9dp"
                    android:layout_marginEnd="9dp"
                    android:layout_marginStart="2dp"
                    android:text="@string/labelReviewsP"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/labelJobsRequestP"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="9dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="9dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/labelJobsActiveP"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </GridLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EEEEEE"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptionP"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/contentDescriptionP" />

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

</ScrollView>
