<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.javog.sesion.OfertasTrabajos"
    tools:showIn="@layout/activity_ofertas_trabajos">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="387dp"
            android:layout_height="411dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/newJobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/titleProblem"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="240dp" />

            <TextView
                android:id="@+id/newJobDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/descripcionProbllema"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="269dp" />

            <TextView
                android:id="@+id/newJobMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/dineroProblema"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="196dp" />

            <TextView
                android:id="@+id/newJobTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/tiempoProblema"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="196dp" />

            <TextView
                android:id="@+id/newJobAditionalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/infoAddProblema"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="196dp" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>
